BUGFIX: Selection circles on populated carousels no longer get squished on mobile.

--- a/jetstream/static/jetstream/css/layouts.css
+++ b/jetstream/static/jetstream/css/layouts.css
@@ -988,7 +988,7 @@
   right: 3%;
   bottom: 3%;
   position: static;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 @media (min-width: 768px) {
